--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2020-10-10" />
 
-<title>Simple Website</title>
+<title>Case Study 1</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -424,7 +424,7 @@ summary {
 
 
 
-<h1 class="title toc-ignore">Simple Website</h1>
+<h1 class="title toc-ignore">Case Study 1</h1>
 <h4 class="author">Alexander_Sepenu</h4>
 <h4 class="date">10/10/2020</h4>
 
